# sd-deps

./: .gitattributes  .gitignore  CMakeLists.txt  README.md  readme.txt  thirdpartydefinitions.cmake  thirdpartydownloader.cmake
.github/workflows/: cmake.yml  manualbuild.yml  vs2017-build.yml  vs2019-build.yml  vs2022-build.yml
patches/: enet-1.3.17.CMakeLists.txt  jpeg-9e.CMakeLists.txt  jpeg-9f.CMakeLists.txt  openal-soft-1.18.2.CMakeLists.txt  sdl2_mixer-2.0.4.CMakeLists.txt  sqlite3-CMakeLists.txt
